💄 Prevent label from overlapping score

--- a/frontend/scss/components/atoms/pixi-scale.scss
+++ b/frontend/scss/components/atoms/pixi-scale.scss
@@ -14,7 +14,7 @@
 
   &-label {
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 32px;
     font-size: 14px;
     font-weight: bold;
   }
